--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,457 +1,33 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
-*{
-  box-sizing: border-box;
-  font-family: Lato;
-}
-
-
-.sidebar{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  line-height: 24px;
-  min-width: 296px;
-  height: 800px;
-  padding: 32px 0;
-  background-color: #F8F9FA;
-  .sidebar-top{
-    img {
-      height: 40px;
-      padding-left: 35px;
-    }
-  }
-  .sidebar-bottom{
-    display: flex;
-    align-items: center;
-    padding-left: 32px;
-    img {
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      margin-right: 16px;
-    }
-    p:nth-child(2){
-      font-size: 14px;
-      color: #6C757D;
-    }
-  }
-}
+@import "variable";
+@import "reset";
+@import "layout/layout";
+@import "component/topbar";
+@import "page/table";
+@import "component/pagination";
+@import "modal/card";
+@import "modal/characterCard";
+@import "modal/characterEdit";
+@import "modal/characterCreate";
 
 
 
 
 
-.menu {
-  margin-top: 32px;
-  padding-left: 0;
-  li {
-    :hover {
-      border-left: 4px solid #198754;
-      color: #198754;
-    }
-    a {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      padding-left: 32px;
-      color: #000;
-      :hover {
-        border: 0px solid #000;
-      }  
-      .material-icons {
-        margin-right: 16px;
-      }
-    }
-  }
-  li ~ li {
-    margin-top: 26px;
-  }
-}
-
-
-body {
-  display: flex;
-}
-
-.content {
-  color: #212529;
-  padding: 0 24px;
-  width: 100%;
-  .additem {
-    .material-icons {
-      margin-right: 4px;
-    }
-  }
-}
-
-.topbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 32px 0;
-  .title {
-    display: flex;
-    align-items: center;  
-    a {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      color: #000;
-      .material-icons {
-        color: #198754;
-      }
-    }
-    .h2 {
-      font-size: 24px;
-      line-height: 33px;
-      margin-right: 24px;
-    }
-  }
-  .tool {
-    .material-icons{
-      margin-left: 25px;
-    }
-  }
-}
-
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0;
-  .header-icon {
-    color: #198754;
-    font-weight: bold;
-    font-size: 12px;
-  }
-  th {
-    text-align: left;
-    font-weight: bold;
-    padding-bottom: 4px;
-    td {
-      align-items: center;
-      text-align: left;
-    }
-  } 
-  td:nth-child(5){
-    text-align: right;
-  }
-}
-
-tr:first-child {
-  border-bottom: 3px solid #000;
-  &:not(:first-child):hover{
-    background: #F8F9FA;
-  }
-  td {
-    padding: 14px 0;
-    .material-icons{
-      margin-left: 25px;
-    }
-  }
-}
 
 
 
 
-.modal-content {
-  font-family: Lato, Helvetica, sans-serif;
-  width: 480px;
-  height: auto;
-  .modal-card {
-    padding: 32px 32px 0 32px;
-    display: flex;
-    align-items: center;
-    img {
-      display: block;
-      min-width: 141px;
-      height: 141px;
-    }
-    span {
-      color: #000;
-      background: #F8F9FA;
-    }
-  }
-  .card-edit-submit-button{
-    button{
-      padding: 8px 32px;
-      border: 1px solid #198754;
-      background: #FFF;
-      color: #198754;;
-      border-radius: 2px;
-      &:hover{
-        color: #FFF;
-        background: #198754;
-      }
-    }
-    button ~ button{
-      margin-left: 15px;
-    }
-  }
-  .card-edit{
-    padding: 32px;
-    display: flex;
-    justify-content: flex-end;
-    button ~ button {
-      margin-left: 15px;
-    }
-    .btn {
-      padding: 8px 32px;
-      border-radius: 2px;
-    }
-  }
-}
-
-
-
-.card-content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  .card-text {
-    display: flex;
-    justify-content: space-between;
-    li:nth-child(2){
-      font-weight:200;
-    }
-    li:nth-child(3){
-      font-size: 24px;
-      line-height: 36px;
-    }
-    li:nth-child(4){
-      color: #6C757D;
-      font-size: 14px;
-      line-height: 24px;
-    }
-    .card-button {
-      color: #000;
-      width: 20px;
-      height: 20px;
-      margin-right: 5px;
-    }
-  }
-  .card-remark{
-    display: flex;
-    justify-content: space-between;
-    p {
-      margin-left: 36px;
-      font-size: 14px;
-      line-height: 24px;
-      background: #F8F9FA;
-      font-weight:100;
-    }
-    .material-icons-outlined{
-      font-size: 24px;
-      background: #FFF;
-      color: #198754;
-    }
-  } 
-}
 
 
 
 
-.arrow-toggle .icon-arrow-down,
-.arrow-toggle.collapsed .icon-arrow-up {
-    display: inline-block;
-}
-.arrow-toggle.collapsed .icon-arrow-down,
-.arrow-toggle .icon-arrow-up {
-    display: none;
-}
 
 
 
-.card-edit-header{
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #CED4DA;
-  padding: 32px;
-  .card-edit-title{
-    font-size: 24px;
-    line-height: 33px;
-    color: #212529;
-  }
-}
-
-.modal-inner{
-  max-height: calc(100vh - 210px);
-  overflow-y: auto;
-  .card-edit-body{
-    padding: 0 32px;
-  }
-}
-
-.card-edit-content{
-  padding-bottom: 24px;
-  border-bottom: 1px solid #CED4DA;
-  .card-edit-content-title{
-    font-size: 20px;
-    line-height: 33px;
-    color: #212529;
-    margin: 16px 0px;
-  }
-  .card-edit-content-header{
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 19px;
-    .card-edit-content-header-status{
-      display: flex;
-      .icon-correct{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-right: 10px;
-        border-radius: 50%;
-        color: #FFF;
-        background: #198754;
-        width: 25px;
-        height: 25px;
-      }
-    }
-  }  
-  .card-edit-mail-button{
-    padding: 16px 128px;
-    width: 100%;
-    color: #CED4DA;
-    border: 1px solid #CED4DA;
-    border-radius: 2px;
-  }
-  .card-edit-mail-button-unverified{
-    padding: 16px 128px;
-    width: 100%;
-    color: #198754;
-    border: 1px solid #CED4DA;
-    border-radius: 2px;  
-    &:hover{
-      background: #40ad7a;
-      color: #FFF;
-    }
-  }
-  .card-edit-checkbox{
-    input[type=checkbox]{
-      margin-right: 8px;
-    }
-    label ~label {
-      margin-top: 16px;
-    }
-  }
-  label{
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 100; 
-  }
-  input[type=text]{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    color: #000;
-    display: inline-block;
-    border: 0px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    &::placeholder{
-      color: #212529;
-      font-size: 16px;
-    }
-  }
-  .input-unverified{
-    border: 1px solid #212529 !important;
-  }
-  select{
-    width: 100%;
-    padding: 16px;
-    margin: 8px 0;
-    color: #000;
-    display: inline-block;
-    border: 1px solid #212529;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-}
 
 
 
-.card-edit-warn{
-  display: flex;
-  .iconify{
-    margin-right: 9px;
-  }
-  p{
-    color: #DC3545;
-    line-height: 33px;
-  }
-  .card-edit-warn-unverified{
-    color: #000;
-    margin-bottom: 0;
-  }
-}
-
-.card-edit-warn-button{
-  padding: 16px 128px;
-  width: 100%;
-  color: #DC3545;
-  border: 1px solid #DC3545;
-  border-radius: 2px;
-  &:hover{
-    color: #FFF;
-    background: #da5462;
-  }
-}
 
 
-.default-option {
-  display: none;
-  color: gray;
-}
-select::-ms-value {
-  background: none;
-  color: #42413D;
-}
+
+
