--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-  <header class="sidebar">
+  <nav class="sidebar">
     <div class="sidebar-top">
-      <img
-        src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/2b326fe971cd296bd54667a9b4a63c4b0f19fab3/week5/logo-ANSWER.svg"
-        alt="ANSWER">
+      <a href="#">
+        <h1 class="h1">answer</h1>
+      </a>
       <ul class="menu">
         <li><a href="#">
             <span class="material-icons">
@@ -54,11 +54,11 @@
         src="https://images.unsplash.com/photo-1514794749374-fb67509dbb7f?ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MjB8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80"
         alt="">
       <div class="info">
-        <p>Andy Chen</p>
+        <h3 class="h3">Andy Chen</h3>
         <p>andy0401@mail.com</p>
       </div>
     </div>
-  </header>
+  </nav>
 
   <%- contents %>
 
